added search api for restaurants/menus/tables/views + tests + refactored serializer methods
