# microservice/api/tables.py
@@ -12,10 +12,6 @@ def post():
 
     req_data = request.args
     new_table = db.session.query(Table.id).filter_by(name=table["name"]).first()
-
-    q_res = db.session.query(Restaurant).filter_by(operator_id=req_data["operator_id"]).first()
-    if q_res is None:
-        return Response(status=403)
     
     if not new_table:
         new_table = Table(
@@ -35,27 +31,13 @@ def search():
     request.get_data()
     req_data = request.args
 
-    q_res = db.session.query(Restaurant).filter_by(operator_id=req_data["operator_id"]).first()
-    if q_res is None:
-        return Response(status=403)
+    query = db.session.query(Table)
+    for attr, value in req_data.items():
+        query = query.filter(getattr(Table, attr) == value)
 
-    if "seats" in req_data:
-        print(req_data["seats"])
-        query = db.session.query(Table).filter(
-            Table.restaurant_id==req_data["restaurant_id"],
-            Table.seats>=req_data["seats"]).order_by(Table.seats)
-    else:
-        query = db.session.query(Table).filter_by(restaurant_id=req_data["restaurant_id"])
     tables = dumps(
         [
-            table.serialize(
-                [
-                    "id",
-                    "name",
-                    "seats",
-                    "restaurant_id",
-                ]
-            )
+            table.serialize()
             for table in query.all()
         ]
     )
@@ -68,21 +50,8 @@ def get(id):
     if not table:
         return Response(status=404)
 
-    req_data = request.args
-    q_res = db.session.query(Restaurant).filter_by(operator_id=req_data["operator_id"]).first()
-    if q_res is None:
-        return Response(status=403)
-
     return Response(
-        dumps(
-            table.serialize(
-                [
-                    "restaurant_id",
-                    "name",
-                    "seats",
-                ]
-            )
-        ),
+        dumps(table.serialize()),
         status=200,
         mimetype="application/json",
     )
@@ -96,9 +65,6 @@ def patch(id):
     req_data = request.args
     in_table = request.json
 
-    q_res = db.session.query(Restaurant).filter_by(operator_id=req_data["operator_id"]).first()
-    if q_res is None:
-        return Response(status=403)
     check_table = db.session.query(Table).filter(Table.name==in_table["name"], Table.id!=id).first()
     
     if not check_table:
@@ -115,11 +81,6 @@ def delete(id):
     table_to_delete = db.session.query(Table).filter_by(id=id).first()
     if not table_to_delete:
         return Response(status=404)
-    
-    req_data = request.args
-    q_res = db.session.query(Restaurant).filter_by(operator_id=req_data["operator_id"]).first()
-    if q_res is None:
-        return Response(status=403)
 
     db.session.delete(table_to_delete)
     db.session.commit()
